# cirrus

./: .env.example  .gitignore  deploy.sh  diag.py  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  resend_reports.py  resend_vmd.py  resend_vmd_solof.py
accounts/: admin.py  analysis_helpers.py  apps.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_emailconfirmation.py  (+4 more)
cirrus/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
cirrus/utils/: formatters.py
core/: admin.py  apps.py  cerebro_tasks.py  models.py  tasks.py  tasks_api_keys.py  tasks_snowie.py  urls.py  views.py
docker/: Dockerfile  docker-compose.yml
docs/: ANALYSIS_TOOLS.md  API.md  ARCHITECTURE.md  CSF.md  EFOS.md  PAYMENTS.md  PLANS.md
inteligencia/: 2026-05-analisis-monitoreo-sat.md
nginx/: cirrus.conf
reportes/: apps.py  services.py  tasks.py  urls.py  views.py
sat_health_worker/: install_sat_worker.sh  sat-health-worker.service  worker.py
sat_scrapper_core/: README.md  __init__.py  browser_bot.py  cli.py  config.py  engine.py  fiel.py  pyproject.toml  sat_api.py  sat_navigator.py  storage.py  utils.py
sat_scrapper_core/adapters/: __init__.py  django_adapter.py  standalone.py
sat_scrapper_core/cfdi_pdf/: __init__.py  number_to_words.py  qr.py  render.py  xml_parse.py
sat_scrapper_core/cfdi_pdf/templates/: cfdi_pdf.html
scripts/: _e2e_onboarding_test.py  backup.sh  benchmark_monitor.sh  health_check.sh  migrate_jessica.py
systemd/: cirrus-beat.service  cirrus-cerebro.service  cirrus-web.service  cirrus-worker.service
(+164 files in other folders)
